--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,13 @@ li {
 body {
   font-family: Arial, sans-serif;
   color: #333;
+  background-color: #ccc;
 }
 
 /* Header Styles */
 /* Styling for the header section */
 header {
-  background-color: #343a40;
+  background-color: #7b68ee;
   color: #fff;
   padding: 1rem 0; /* Adding padding to the top and bottom */
 }
@@ -49,12 +50,33 @@ section {
   padding: 2.5rem; /* Adding padding around the content */
 }
 
-/* About Section Styles */
+/* Profile img styles */
+#profileimg {
+  text-align: center;
+}
+
+/* Scaling profile imgae size */
+.profileimg {
+  max-width: 25rem;
+  height: auto;
+}
+
 /* Styling for the "About" section */
 #about {
   background-color: #f5f5f5;
+  /* text-align: center; */
   margin: auto;
   width: 50%;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+}
+
+#about h1 {
+  padding-bottom: 0.75rem;
+}
+
+#about p {
+  padding-bottom: 0.75rem;
 }
 
 /* Skills Section Styles */
@@ -64,6 +86,8 @@ section {
   background-color: #fff;
   margin: auto;
   width: 50%;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
 }
 
 #skills h1 {
@@ -74,11 +98,16 @@ section {
 
 .skill {
   width: 70%; /* Adjusted width as needed */
-  height: 150px; /* Set the desired height */
+  height: auto; /* Set the desired height */
   margin: 0 auto 1.25rem; /* Adjusted margin for spacing */
   padding: 1.25rem;
   border: 1px solid #e0e0e0;
   background-color: #f9f9f9;
+  border-radius: 1rem; /* Add border-radius for rounded corners */
+}
+
+.skill h2 {
+  padding-bottom: 0.75rem;
 }
 
 /* Projects Section Styles */
@@ -88,6 +117,8 @@ section {
   background-color: #fff;
   margin: auto;
   width: 50%;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
 }
 
 #projects h1 {
@@ -101,17 +132,24 @@ section {
   padding: 1.25rem;
   border: 1px solid #e0e0e0;
   background-color: #f9f9f9;
+  border-radius: 1rem; /* Add border-radius for rounded corners */
+}
+
+.project h2 {
+  padding-bottom: 0.75rem;
 }
 
 /* Social Media Section Styles */
 /* Styling for the "Social Media" section */
 #socialmedia {
-  background-color: #343a40;
+  background-color: #7b68ee;
   color: #fff;
   text-align: center;
   margin: auto;
   width: 50%;
   padding: 2rem;
+  border-radius: 1rem; /* Add border-radius for rounded corners */
+  margin-bottom: 2rem;
 }
 
 #socialmedia p {
@@ -143,8 +181,9 @@ footer {
   text-align: center;
   margin: 1rem;
   padding: 1.25rem;
-  background-color: #343a40;
+  background-color: #7b68ee;
   color: #fff;
+  border-radius: 1rem; /* Add border-radius for rounded corners */
 }
 
 /* Links Styles */
