--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ li {
 /* Global Styles */
 /* Setting font-family and text color for the entire body */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #333;
   background-color: #ccc;
 }
@@ -73,6 +73,7 @@ section {
 
 #about h1 {
   padding-bottom: 0.75rem;
+  /* font-family: "Montserrat", Arial, sans-serif; */
 }
 
 #about p {
@@ -192,6 +193,58 @@ footer {
 
 .hidden {
   display: none;
+}
+
+/* Contact me button */
+.show-contact {
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  padding: 0.75rem 1.5rem;
+  /* margin: 5rem 2rem; */
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+/* Contact box */
+.contact {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30%;
+
+  background-color: white;
+  padding: 5rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+/* Contact boxes X button */
+.close-contact {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+/* Blur overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
 
 /* Links Styles */
