--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ header {
   background-color: #503dbb;
   color: #fff;
   padding: 1rem 0; /* Adding padding to the top and bottom */
+  position: fixed;
+  top: 0;
+  border-radius: 4rem;
+  margin: 1rem;
 }
 
 /* Navigation Styles */
@@ -210,7 +214,7 @@ footer {
 
 /* Contact box */
 .contact {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
