--- a/styles.css
+++ b/styles.css
@@ -20,32 +20,13 @@ body {
 }
 
 /* Header Styles */
-/* Styling for the header section */
-header {
-  background-color: #503dbb;
-  color: #fff;
-  padding: 1rem 0; /* Adding padding to the top and bottom */
-  position: fixed;
-  top: 0;
-  border-radius: 4rem;
-  margin: 1rem;
-}
-
 /* Navigation Styles */
-nav ul {
+header {
   list-style: none;
-  display: flex;
-  justify-content: space-between; /* Distribute items along the space */
-}
-
-nav li {
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
+  margin-left: 3rem;
+  margin-top: 2.5rem;
+  margin-right: 3rem;
+  position: fixed;
 }
 
 /* Section Styles */
@@ -68,7 +49,6 @@ section {
 /* Styling for the "About" section */
 #about {
   background-color: #f5f5f5;
-  /* text-align: center; */
   margin: auto;
   width: 50%;
   border-radius: 1rem;
@@ -77,7 +57,7 @@ section {
 
 #about h1 {
   padding-bottom: 0.75rem;
-  /* font-family: "Montserrat", Arial, sans-serif; */
+  text-align: center;
 }
 
 #about p {
@@ -109,6 +89,8 @@ section {
   border: 1px solid #e0e0e0;
   background-color: #f9f9f9;
   border-radius: 1rem; /* Add border-radius for rounded corners */
+  border-width: 0.2rem;
+  border-color: #503dbb;
 }
 
 .skill h2 {
@@ -137,7 +119,9 @@ section {
   padding: 1.25rem;
   border: 1px solid #e0e0e0;
   background-color: #f9f9f9;
-  border-radius: 1rem; /* Add border-radius for rounded corners */
+  border-radius: 1rem;
+  border-width: 0.2rem;
+  border-color: #503dbb;
 }
 
 .project h2 {
@@ -157,7 +141,7 @@ section {
   margin: auto;
   width: 50%;
   padding: 2rem;
-  border-radius: 1rem; /* Add border-radius for rounded corners */
+  border-radius: 1rem;
   margin-bottom: 2rem;
 }
 
@@ -192,7 +176,7 @@ footer {
   padding: 1.25rem;
   background-color: #503dbb;
   color: #fff;
-  border-radius: 1rem; /* Add border-radius for rounded corners */
+  border-radius: 1rem;
 }
 
 .hidden {
@@ -205,10 +189,13 @@ footer {
   font-family: "Montserrat", sans-serif;
   padding: 0.75rem 1.5rem;
   /* margin: 5rem 2rem; */
-  border: none;
+  /* border: none; */
+  border-color: #503dbb;
   background-color: #fff;
-  color: #444;
+  color: #000000;
   border-radius: 10rem;
+  height: 7rem;
+  width: 7rem;
   cursor: pointer;
 }
 
@@ -254,7 +241,7 @@ footer {
 /* Links Styles */
 /* Styling for links and their hover effect */
 a {
-  color: #007bff;
+  color: #503dbb;
   text-decoration: none;
 }
 
